[metadata]
name = entropy
version = 0.0.1
url = https://entropy.zuh0.com
author = Gabriel Duque
author_email = gabriel.duque@lse.epita.fr
description = a return-oriented programming chain searching tool for ELF x86_64 binaries implemented in Python3
long_description = file: README.rst
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Security
project_urls =
    Documentation = https://entropy.zuh0.com
    Source = https://github.com/zuh0/entropy
    Tracker = https://github.com/zuh0/entropy/issues

[options]
python_requires = >=3.6
packages = find:
zip_safe = true
install_requires =
    capstone

[options.entry_points]
console_scripts =
    entropy = entropy.main:main

[options.extras_require]
doc =
    sphinx
dev =
    black
    mypy

[build_sphinx]
project = entropy
source-dir = docs
build-dir  = docs/docs-build
